Bug 500491 - Only reset saved JSOPTION_JIT after js_Execute, r=brendan.